--- a/tinyipam/static/style.css
+++ b/tinyipam/static/style.css
@@ -1,10 +1,13 @@
 html,
 body {
   height: 100%;
-  background-color: lightgrey;
 }
 
-div.hello {
-  text-align: center;
-  padding-top: 25vh;
+main {
+  padding-top: 70px;
+  flex: 1 0 auto;
+}
+
+img.logo {
+  height: 2em;
 }
