--- a/tinyipam/templates/modules/navbar.html
+++ b/tinyipam/templates/modules/navbar.html
@@ -20,19 +20,22 @@
                         Subnets
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarSubnet">
-                        <a class="dropdown-item" href={{ url_for("SubnetsView:index")}}><i class="fa fa-list-alt"></i> Manage subnets</a>
-                        <a class="dropdown-item" href="/"><i class="fa fa-plus"></i> New subnet</a>
+                        <a class="dropdown-item" href="{{ url_for('SubnetView:index') }}"><i class="fa fa-list-alt"></i> Manage subnets</a>
+                        <a class="dropdown-item" href="{{ url_for('SubnetView:index', action='new') }}"><i class="fa fa-plus"></i> New subnet</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ url_for('SubnetView:get', id=1) }}">Favorite subnet 1</a>
+                        <a class="dropdown-item" href="{{ url_for('SubnetView:get', id=2) }}">Favorite subnet 2</a>
                     </div>
                 </li>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDomains" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
-                        Domains
+                        Site management
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDomains">
-                        <a class="dropdown-item" href="/"><i class="fa fa-list-alt"></i> Manage domains</a>
-                        <a class="dropdown-item" href="/"><i class="fa fa-plus"></i> New domain</a>
+                        <a class="dropdown-item" href="{{ url_for('DomainView:index') }}"><i class="fa fa-list-alt"></i> Manage domains</a>
+                        <a class="dropdown-item" href="{{ url_for('DomainView:index', action='new') }}"><i class="fa fa-plus"></i> New domain</a>
                     </div>
                 </li>
 
@@ -46,7 +49,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarUserDropdown">
                         <a class="dropdown-item" href="/"><i class="fa fa-address-card"></i> Profile</a>
-                        <a class="dropdown-item" href="/"><i class="fa fa-wrench"></i> Manage site</a>
+                        <a class="dropdown-item" href="/"><i class="fa fa-wrench"></i> Configuration</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
