--- a/tinyipam/templates/subnet.html
+++ b/tinyipam/templates/subnet.html
@@ -2,6 +2,8 @@
 
 {% block page_title %}Subnet - 192.168.100.0/24{% endblock %}
 
+{% block dialogs %}{% endblock %}
+
 {% block content %}
 
 {% endblock %}
