--- a/tinyipam/templates/modules/base.html
+++ b/tinyipam/templates/modules/base.html
@@ -21,6 +21,9 @@
 </head>
 <body class="d-flex flex-column">
 
+    {% block dialogs %}{% endblock %}
+
+
     {% include 'modules/navbar.html' %}
 
     <main>
