--- a/tinyipam/templates/subnets.html
+++ b/tinyipam/templates/subnets.html
@@ -2,17 +2,110 @@
 
 {% block page_title %}Subnets{% endblock %}
 
+{% block dialogs %}
+<div class="modal fade" id="newSubnetDialog" tabindex="-1" role="dialog" aria-labelledby="newSubnetDialogTitle"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="newSubnetDialogTitle">New subnet</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <form id="newSubnetForm" method="POST" action="{{ url_for('SubnetView:index') }}">
+                        <div class="form-group row">
+                            <label class="col-3 col-form-label" for="name">Name</label>
+                            <div class="col-9">
+                                <input id="name" name="name" type="text" aria-describedby="nameHelpBlock"
+                                       required="required" class="form-control">
+                                <span id="nameHelpBlock"
+                                      class="form-text text-muted">Some name that describes this subnet</span>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="text1" class="col-3 col-form-label">IPv4</label>
+                            <div class="col-9">
+                                <input id="text1" name="text1" type="text" aria-describedby="text1HelpBlock"
+                                       class="form-control">
+                                <span id="text1HelpBlock" class="form-text text-muted">IPv4 CIDR address of the subnet. (optional but at least one must be provided)</span>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="text" class="col-3 col-form-label">IPv6</label>
+                            <div class="col-9">
+                                <input id="text" name="text" type="text" aria-describedby="textHelpBlock"
+                                       class="form-control">
+                                <span id="textHelpBlock" class="form-text text-muted">IPv6 CIDR address of the subnet. (optional but at least one must be provided)</span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary" form="newSubnetForm">Create subnet</button>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
 
 <div class="row">
-    <div class="col-12">
-        <a class="btn btn-success float-right" href="#"><i class="fa fa-plus"></i> Add new subnet</a>
+    <div class="col-12 text-right">
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#newSubnetDialog">
+            <i class="fa fa-plus"></i> New subnet
+        </button>
     </div>
 </div>
 
 
 <div class="row my-4">
     <div class="col-12">
+
+
+        <table class="table table-hover ">
+            <thead>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">Name</th>
+                <th scope="col">IPv4</th>
+                <th scope="col">IPv6</th>
+                <th scope="col">Utilization</th>
+                <th scope="col">Labels</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="{{ url_for('SubnetView:get', id=1) }}">SERVERS</a></td>
+                <td>10.0.0.0/16</td>
+                <td>2001:4c4e:16d0:2100::/64</td>
+                <td>50/65536</td>
+                <td>NAT</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="{{ url_for('SubnetView:get', id=2) }}">WORKPLACE</a></td>
+                <td>172.20.0.0/16</td>
+                <td>2001:4c4e:16d0:2100::/64</td>
+                <td>10/65536</td>
+                <td>PUBLIC</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox"></td>
+                <td><a href="{{ url_for('SubnetView:get', id=3) }}">PUBLIC</a></td>
+                <td>172.20.0.0/16</td>
+                <td>2001:4c4e:16d0:2100::/64</td>
+                <td>10/65536</td>
+                <td>PUBLIC</td>
+            </tr>
+            </tbody>
+        </table>
 
 
     </div>
