--- a/tinyipam/templates/modules/navbar.html
+++ b/tinyipam/templates/modules/navbar.html
@@ -3,7 +3,7 @@
 
     <div class="container">
         <div class="navbar-brand"><a href="/">
-            <img src="{{ url_for('static', filename='logo.svg') }}" class="logo">
+            <img src="{{ url_for('static', filename='assets/logo.svg') }}" class="logo">
         </a></div>
 
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar"
