Added login stuff

--- a/tinyipam/templates/domains.html
+++ b/tinyipam/templates/domains.html
@@ -26,8 +26,9 @@
                             <div class="col-9">
                                 <input id="name" name="name" type="text" aria-describedby="nameHelpBlock"
                                        required="required" class="form-control">
-                                <span id="nameHelpBlock"
-                                      class="form-text text-muted">TLD of your domain</span>
+                                <span id="nameHelpBlock" class="form-text text-muted">
+                                    TLD of your domain
+                                </span>
                             </div>
                         </div>
                     </form>
