--- a/tinyipam/templates/modules/navbar.html
+++ b/tinyipam/templates/modules/navbar.html
@@ -6,6 +6,8 @@
             <img src="{{ url_for('static', filename='assets/logo.svg') }}" class="logo">
         </a></div>
 
+        {% if current_user.is_authenticated %}
+
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar"
                 aria-controls="navbarSupportedContent" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
@@ -56,6 +58,8 @@
                 </li>
             </ul>
         </div>
+
+        {% endif %}
 
     </div>
 
