--- a/tinyipam/templates/subnets.html
+++ b/tinyipam/templates/subnets.html
@@ -26,8 +26,9 @@
                             <div class="col-9">
                                 <input id="name" name="name" type="text" aria-describedby="nameHelpBlock"
                                        required="required" class="form-control">
-                                <span id="nameHelpBlock"
-                                      class="form-text text-muted">Some name that describes this subnet</span>
+                                <span id="nameHelpBlock" class="form-text text-muted">
+                                    Some name that describes this subnet
+                                </span>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -35,7 +36,9 @@
                             <div class="col-9">
                                 <input id="text1" name="text1" type="text" aria-describedby="text1HelpBlock"
                                        class="form-control">
-                                <span id="text1HelpBlock" class="form-text text-muted">IPv4 CIDR address of the subnet. (optional but at least one must be provided)</span>
+                                <span id="text1HelpBlock" class="form-text text-muted">
+                                    IPv4 CIDR address of the subnet. (optional but at least one must be provided)
+                                </span>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -43,7 +46,9 @@
                             <div class="col-9">
                                 <input id="text" name="text" type="text" aria-describedby="textHelpBlock"
                                        class="form-control">
-                                <span id="textHelpBlock" class="form-text text-muted">IPv6 CIDR address of the subnet. (optional but at least one must be provided)</span>
+                                <span id="textHelpBlock" class="form-text text-muted">
+                                    IPv6 CIDR address of the subnet. (optional but at least one must be provided)
+                                </span>
                             </div>
                         </div>
                     </form>
