--- a/tinyipam/templates/modules/navbar.html
+++ b/tinyipam/templates/modules/navbar.html
@@ -47,13 +47,13 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-user"></i> User
+                        <i class="fa fa-user"></i> {{ current_user.name }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarUserDropdown">
                         <a class="dropdown-item" href="/"><i class="fa fa-address-card"></i> Profile</a>
                         <a class="dropdown-item" href="/"><i class="fa fa-wrench"></i> Configuration</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                        <a class="dropdown-item" href="{{ url_for('LoginView:logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
                 </li>
             </ul>
