--- a/tinyipam/templates/subnets.html
+++ b/tinyipam/templates/subnets.html
@@ -32,9 +32,9 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="text1" class="col-3 col-form-label">IPv4</label>
+                            <label for="ipv4" class="col-3 col-form-label">IPv4</label>
                             <div class="col-9">
-                                <input id="text1" name="text1" type="text" aria-describedby="text1HelpBlock"
+                                <input id="ipv4" name="ipv4" type="text" aria-describedby="text1HelpBlock"
                                        class="form-control">
                                 <span id="text1HelpBlock" class="form-text text-muted">
                                     IPv4 CIDR address of the subnet. (optional but at least one must be provided)
@@ -42,9 +42,9 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="text" class="col-3 col-form-label">IPv6</label>
+                            <label for="ipv6" class="col-3 col-form-label">IPv6</label>
                             <div class="col-9">
-                                <input id="text" name="text" type="text" aria-describedby="textHelpBlock"
+                                <input id="ipv6" name="ipv6" type="text" aria-describedby="textHelpBlock"
                                        class="form-control">
                                 <span id="textHelpBlock" class="form-text text-muted">
                                     IPv6 CIDR address of the subnet. (optional but at least one must be provided)
