--- a/tinyipam/templates/domains.html
+++ b/tinyipam/templates/domains.html
@@ -24,7 +24,7 @@
                         <div class="form-group row">
                             <label class="col-3 col-form-label" for="name">Name</label>
                             <div class="col-9">
-                                <input id="name" name="name" type="text" aria-describedby="nameHelpBlock"
+                                <input id="tld" name="tld" type="text" aria-describedby="nameHelpBlock"
                                        required="required" class="form-control">
                                 <span id="nameHelpBlock" class="form-text text-muted">
                                     TLD of your domain
@@ -72,7 +72,7 @@
                 {% for domain in domains %}
                 <tr>
                     <td><input type="checkbox" value="{{ domain.id }}"></td>
-                    <td><a href="{{ url_for('DomainView:get', id=domain.id) }}">domain.tld</a></td>
+                    <td><a href="{{ url_for('DomainView:get', id=domain.id) }}">{{ domain.tld }}</a></td>
                     <td>0</td>
                     <td></td>
                 </tr>
