Changed Site management to DNS

--- a/tinyipam/templates/modules/navbar.html
+++ b/tinyipam/templates/modules/navbar.html
@@ -33,7 +33,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDomains" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
-                        Site management
+                        DNS
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDomains">
                         <a class="dropdown-item" href="{{ url_for('DomainView:index') }}"><i class="fa fa-list-alt"></i> Manage domains</a>
