--- a/tinyipam/templates/subnet.html
+++ b/tinyipam/templates/subnet.html
@@ -2,7 +2,137 @@
 
 {% block page_title %}Subnet - {{ subnet.name }}{% endblock %}
 
-{% block dialogs %}{% endblock %}
+{% block dialogs %}
+<div class="modal fade" id="editAddressDialog" tabindex="-1" role="dialog" aria-labelledby="editAddressDialogTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editAddressDialogTitle">Edit Address</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <nav class="pb-4">
+                  <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-general" role="tab" aria-controls="nav-home" aria-selected="true">General</a>
+                    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-dns" role="tab" aria-controls="nav-dns" aria-selected="false">DNS</a>
+                    <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-labels" role="tab" aria-controls="nav-labels" aria-selected="false">Labels</a>
+                  </div>
+                </nav>
+
+                <form id="editAddressDialogForm" name="editAddressDialogForm" method="POST">
+                    <input type="hidden" name="address_id" value="1">
+                </form>
+
+                <div class="tab-content" id="nav-tabContent">
+                  <div class="tab-pane fade show active" id="nav-general" role="tabpanel" aria-labelledby="nav-general-tab">
+                      <div class="form-group row">
+                          <label class="col-3 col-form-label" for="name">Name</label>
+                          <div class="col-9">
+                            <input id="name" name="name" type="text" aria-describedby="nameHelpBlock"
+                                   required="required" class="form-control" form="editAddressDialogForm">
+                            <span id="nameHelpBlock" class="form-text text-muted">
+                                Some name that describes this address.
+                            </span>
+                          </div>
+                        </div>
+                      {% if subnet.ipv4 %}
+                        <div class="form-group row">
+                            <label for="ipv4" class="col-3 col-form-label">IPv4</label>
+                            <div class="col-9">
+                                <input id="ipv4" name="ipv4" type="text" aria-describedby="text1HelpBlock"
+                                       required="required" class="form-control" form="editAddressDialogForm">
+                                <span id="text1HelpBlock" class="form-text text-muted">
+                                    IPv4 address.
+                                </span>
+                            </div>
+                        </div>
+                      {% endif %}
+                      {% if subnet.ipv6 %}
+                        <div class="form-group row">
+                            <label for="ipv6" class="col-3 col-form-label">IPv6</label>
+                            <div class="col-9">
+                                <input id="ipv6" name="ipv6" type="text" aria-describedby="textHelpBlock"
+                                       required="required" class="form-control" form="editAddressDialogForm">
+                                <span id="textHelpBlock" class="form-text text-muted">
+                                    IPv6 address.
+                                </span>
+                            </div>
+                        </div>
+                      {% endif %}
+                  </div>
+                  <div class="tab-pane fade" id="nav-dns" role="tabpanel" aria-labelledby="nav-dns-tab">
+                      <div class="text-right">
+                          {% if subnet.ipv4 %}
+                          <button type="button" class="btn btn-sm btn-success">
+                            <i class="fa fa-plus"></i> A
+                          </button>
+                          {% endif %}
+                          {% if subnet.ipv6 %}
+                          <button type="button" class="btn btn-sm btn-success">
+                            <i class="fa fa-plus"></i> AAAA
+                          </button>
+                          {% endif %}
+                          <button type="button" class="btn btn-sm btn-success">
+                            <i class="fa fa-plus"></i> PTR
+                          </button>
+                      </div>
+                      <hr />
+                      <div id="recordHolder">
+                              <div class="form-group row">
+                                  <label class="col col-2 col-form-label" for="record-name-0">A</label>
+                                  <div class="col col-6">
+                                    <input id="record-name-0" name="records[0][name]" type="text" aria-describedby="nameHelpBlock"
+                                           required="required" class="form-control" form="editAddressDialogForm">
+                                    <span id="nameHelpBlock" class="form-text text-muted">
+                                        Name of the A record pointing to this address.
+                                    </span>
+                                  </div>
+                                  <div class="col col-2 col-lg-3">
+                                      <select name="records[0][zone]" class="form-control w-100" form="editAddressDialogForm">
+                                          <option value="1">
+                                              local
+                                          </option>
+                                          <option value="2">
+                                              otherafajfgdajfopjadsf
+                                          </option>
+                                      </select>
+                                      <span id="nameHelpBlock" class="form-text text-muted">
+                                        Zone
+                                    </span>
+                                  </div>
+                                  <div class="col col-2 col-lg-1">
+                                      <button type="button" class="btn btn-sm btn-danger">
+                                        <i class="fa fa-trash"></i>
+                                      </button>
+                                  </div>
+                              </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade" id="nav-labels" role="tabpanel" aria-labelledby="nav-labels-tab">
+                      <div class="form-group row">
+                          <div class="col col-12">
+                              <label for="labels" class="col-form-label">Labels</label>
+                              <textarea id="labels" name="labels" class="form-control w-100" form="editAddressDialogForm"></textarea>
+                          </div>
+                        </div>
+                  </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary" form="editAddressDialogForm">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -13,7 +143,7 @@
 
     </div>
     <div class="col-6 text-right">
-        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#newAddressDialog">
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#editAddressDialog">
             <i class="fa fa-plus"></i> New Address
         </button>
     </div>
@@ -29,8 +159,8 @@
             <tr>
                 <th scope="col"></th>
                 <th scope="col">Name</th>
-                <th scope="col">IPv4</th>
-                <th scope="col">IPv6</th>
+                {% if subnet.ipv4 %}<th scope="col">IPv4</th>{% endif %}
+                {% if subnet.ipv6 %}<th scope="col">IPv6</th>{% endif %}
                 <th scope="col">DNS</th>
                 <th scope="col">Labels</th>
             </tr>
@@ -40,8 +170,8 @@
                 <tr>
                     <td><input type="checkbox" value="{{ address.id }}"></td>
                     <td><a href="#">{{ address.name }}</a></td>
-                    <td>{{ address.ipv4 }}</td>
-                    <td>{{ address.ipv6 }}</td>
+                    {% if subnet.ipv4 %}<td>{{ address.ipv4 }}</td>{% endif %}
+                    {% if subnet.ipv6 %}<td>{{ address.ipv6 }}</td>{% endif %}
                     <td>
                         {% for record in address.records %}
                             {{ record.type.name }}
